adding trial count process logic